added scss cause

--- a/app/index.html
+++ b/app/index.html
@@ -96,7 +96,7 @@
                 <!-- cause -->
 
                 <div class="cause">
-                    <div class="container">
+                    <div class="cause__container">
                         <div class="cause__description">
                             <span class="cause__slogan">
                                 Why Thrive?
