added about ,and planning item

--- a/app/index.html
+++ b/app/index.html
@@ -168,34 +168,32 @@
                     </div>
 
                     <div class="planning__items--big">
-                        <div class="planning__item">
-                            <span class="planning__slogan">
+                        <div class="planning__item--big">
+                            <span class="planning__slogan planning__slogan--big">
                                 Physical Health
                             </span>
                         </div>
                         <div class="planning__item--big">
-                            <span class="planning__slogan">
+                            <span class="planning__slogan planning__slogan--big">
                                 Mental Health
                             </span>
                         </div>
                         <div class="planning__item--big">
-                            <span class="planning__slogan">
+                            <span class="planning__slogan planning__slogan--big">
                                 Nutrition
-                            </span>
-                            <img class="planning__item-img" src="./images/sport-img.png" alt="images">
                         </div>
                         <div class="planning__item--big">
-                            <span class="planning__slogan">
+                            <span class="planning__slogan planning__slogan--big">
                                 Gymnastics
                             </span>
                         </div>
-                        <div class="planning__item">
-                            <span class="planning__slogan">
+                        <div class="planning__item--big">
+                            <span class="planning__slogan planning__slogan--big">
                                 Crossfit
                             </span>
                         </div>
                         <div class="planning__item--big">
-                            <span class="planning__slogan">
+                            <span class="planning__slogan planning__slogan--big">
                                 Aerobics
                             </span>
                         </div>
