added planning,addition, candidates

--- a/app/index.html
+++ b/app/index.html
@@ -13,47 +13,45 @@
     <div class="container-fluid">
         <div class="wrapper">
 
-            <div class="wrap">
-
-                <!-- header -->
-                <header class="header">
-                    <div class="header__container">
-                        <div class="header__logo logo">
-                            <a class="logo__link" href="/">Thrivetalk</a>
-                        </div>
-                        <nav class="menu">
-                            <ul class="menu__list">
-                                <li class="menu__list-item">
-                                    <a class="menu__list-link menu__list-link--active" href="#">
-                                        Home
-                                    </a>
-                                </li>
-                                <li class="menu__list-item">
-                                    <a class="menu__list-link" href="#">
-                                        About
-                                    </a>
-                                </li>
-                                <li class="menu__list-item">
-                                    <a class="menu__list-link" href="#">
-                                        Services
-                                    </a>
-                                </li>
-                                <li class="menu__list-item">
-                                    <a class="menu__list-link" href="#">
-                                        Blog
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
-                        <div class="header__link">
-                            <a href="" class="header__link--button">
-                                CONTACT US
-                            </a>
-                        </div>
+            <!-- header -->
+            <header class="header">
+                <div class="header__container">
+                    <div class="header__logo logo">
+                        <a class="logo__link" href="/">Thrivetalk</a>
                     </div>
-                </header>
+                    <nav class="menu">
+                        <ul class="menu__list">
+                            <li class="menu__list-item">
+                                <a class="menu__list-link menu__list-link--active" href="#">
+                                    Home
+                                </a>
+                            </li>
+                            <li class="menu__list-item">
+                                <a class="menu__list-link" href="#">
+                                    About
+                                </a>
+                            </li>
+                            <li class="menu__list-item">
+                                <a class="menu__list-link" href="#">
+                                    Services
+                                </a>
+                            </li>
+                            <li class="menu__list-item">
+                                <a class="menu__list-link" href="#">
+                                    Blog
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="header__link">
+                        <a href="" class="header__link--button">
+                            CONTACT US
+                        </a>
+                    </div>
+                </div>
+            </header>
 
-
+            <main class="main">
                 <!-- description -->
 
                 <section class="description">
@@ -79,20 +77,17 @@
                                 <a class="description__link description__link--what-to-do " href="#">WHAT DO I DO</a>
                             </div>
                         </div>
-                        <div class="description__img-block">
-                            <div class="description__img-wrapper">
+                        <div class="description__img-wrapper">
 
-                                <div class="description__img-container">
-
-                                </div>
+                            <div class="description__img-container">
 
                             </div>
+
                         </div>
+
                     </div>
                 </section>
-            </div>
 
-            <main class="main">
                 <!-- cause -->
 
                 <div class="cause">
@@ -275,7 +270,7 @@
                     <div class="addition__img-wrap">
                         <img class="addition__img" src="./images/addition-img.png" alt="images">
                     </div>
-                    <div class="addition__description">
+                    <div class="addition__description section__description">
                         <h3 class="addition__title title">
                             YOU SHOULD ALSO KNOW
                         </h3>
@@ -295,13 +290,13 @@
                 <!-- candidates -->
 
                 <section class="candidates">
-                    <div class="candidates__description">
+                    <div class="candidates__description section__description">
                         <h3 class="candidates__title title">
                             CONTACT US
                         </h3>
-                        <span class="candidates__sogan">
+                        <p class="candidates__slogan">
                             Ready. Set. Smile
-                        </span>
+                        </p>
                         <p class="candidates__text">
                             Take the free online assessment to see if you are a candidate and get started on your
                             journey.
@@ -359,6 +354,7 @@
                     </div>
                 </div>
             </main>
+
             <!-- footer -->
             <footer class="footer">
                 <p class="footer__copy">
