--- a/app/index.html
+++ b/app/index.html
@@ -334,9 +334,9 @@
                                 Buffalo, United States
                             </p>
 
-                            <div contacts__item-links>
-                                <a class="contacts__item-link" href="tel: +555283784333">+555 283 784 333</a>
-                                <a class="contacts__item-link"
+                            <div class="contacts__item-links">
+                                <a class="contacts__item-link contacts__item-link--tel" href="tel: +555283784333">+555 283 784 333</a>
+                                <a class="contacts__item-link contacts__item-link--email"
                                     href="mailto: office@enfold-health.com">office@enfold-health.com</a>
                             </div>
 
@@ -346,9 +346,10 @@
                                 OFFICE HOURS
                             </h5>
                             <p class="contacts__item-text">
-                                Mo-Fr: 8:00-19:00
-                                Sa: 8:00-14:00
-                                Su: closed
+                                <span> Mo-Fr: 8:00-19:00</span> 
+                                <span> Sa: 8:00-14:00</span>
+                                <span>  Su: closed</span> 
+                               
                             </p>
                         </div>
                     </div>
