--- a/app/index.html
+++ b/app/index.html
@@ -329,13 +329,14 @@
                             <h5 class="contacts__item-title">
                                 ENFOLD HEALTH
                             </h5>
-                            <p class="contacts__item-text">
+                            <p class="contacts__item-text contacts__item-text--address">
                                 Main Street 1, Olcott
                                 Buffalo, United States
                             </p>
 
                             <div class="contacts__item-links">
-                                <a class="contacts__item-link contacts__item-link--tel" href="tel: +555283784333">+555 283 784 333</a>
+                                <a class="contacts__item-link contacts__item-link--tel" href="tel: +555283784333">+555
+                                    283 784 333</a>
                                 <a class="contacts__item-link contacts__item-link--email"
                                     href="mailto: office@enfold-health.com">office@enfold-health.com</a>
                             </div>
@@ -346,10 +347,10 @@
                                 OFFICE HOURS
                             </h5>
                             <p class="contacts__item-text">
-                                <span> Mo-Fr: 8:00-19:00</span> 
+                                <span> Mo-Fr: 8:00-19:00</span>
                                 <span> Sa: 8:00-14:00</span>
-                                <span>  Su: closed</span> 
-                               
+                                <span> Su: closed</span>
+
                             </p>
                         </div>
                     </div>
