--- a/app/index.html
+++ b/app/index.html
@@ -140,57 +140,78 @@
                 <section class="planning">
                     <h3 class="planning__title title">WE CAN HELP YOU WITH</h3>
                     <div class="planning__items">
-                        <div class="planning__item">
-                            <span class="planning__slogan">
-                                Weight Lifting
-                            </span>
+                        <div class="planning__item-wrap planning__item-wrap--small">
+                            <div class="planning__item--small square">
+                                <span class="planning__slogan">
+                                    Weight Lifting
+                                </span>
+                            </div>
                         </div>
-                        <div class="planning__item">
-                            <span class="planning__slogan">
-                                Running & Spinning
-                            </span>
+                        <div class="planning__item-wrap planning__item-wrap--small">
+                            <div class="planning__item--small square">
+                                <span class="planning__slogan">
+                                    Running  & Spinning
+                                </span>
+                            </div>
                         </div>
-                        <div class="planning__item">
-                            <span class="planning__slogan">
-                                Pumping Iron
-                            </span>
+                        <div class="planning__item-wrap planning__item-wrap--small">
+                            <div class="planning__item--small square">
+                                <span class="planning__slogan">
+                                    Pumping Iron
+                                </span>
+                            </div>
                         </div>
-                        <div class="planning__item">
-                            <span class="planning__slogan">
-                                Pumping Iron
-                            </span>
+                        <div class="planning__item-wrap planning__item-wrap--small">
+                            <div class="planning__item--small square">
+                                <span class="planning__slogan">
+                                    Pumping Iron
+                                </span>
+                            </div>
                         </div>
                     </div>
 
                     <div class="planning__items--big">
-                        <div class="planning__item--big">
-                            <span class="planning__slogan planning__slogan--big">
-                                Physical Health
-                            </span>
+                        <div class="planning__item-wrap planning__item-wrap--big">
+                            <div class="planning__item--big square">
+                                <span class="planning__slogan planning__slogan--big">
+                                    Physical Health
+                                </span>
+                            </div>
                         </div>
-                        <div class="planning__item--big">
-                            <span class="planning__slogan planning__slogan--big">
-                                Mental Health
-                            </span>
+                        <div class="planning__item-wrap planning__item-wrap--big">
+                            <div class="planning__item--big square">
+                                <span class="planning__slogan planning__slogan--big">
+                                    Mental Health
+                                </span>
+                            </div>
                         </div>
-                        <div class="planning__item--big">
-                            <span class="planning__slogan planning__slogan--big">
-                                Nutrition
+                        <div class="planning__item-wrap planning__item-wrap--big">
+                            <div class="planning__item--big square">
+                                <span class="planning__slogan planning__slogan--big">
+                                    Nutrition
+                                </span>
+                            </div>
                         </div>
-                        <div class="planning__item--big">
-                            <span class="planning__slogan planning__slogan--big">
-                                Gymnastics
-                            </span>
+                        <div class="planning__item-wrap planning__item-wrap--big">
+                            <div class="planning__item--big square">
+                                <span class="planning__slogan planning__slogan--big">
+                                    Gymnastics
+                                </span>
+                            </div>
                         </div>
-                        <div class="planning__item--big">
-                            <span class="planning__slogan planning__slogan--big">
-                                Crossfit
-                            </span>
+                        <div class="planning__item-wrap planning__item-wrap--big">
+                            <div class="planning__item--big square">
+                                <span class="planning__slogan planning__slogan--big">
+                                    Crossfit
+                                </span>
+                            </div>
                         </div>
-                        <div class="planning__item--big">
-                            <span class="planning__slogan planning__slogan--big">
-                                Aerobics
-                            </span>
+                        <div class="planning__item-wrap planning__item-wrap--big">
+                            <div class="planning__item--big square">
+                                <span class="planning__slogan planning__slogan--big">
+                                    Aerobics
+                                </span>
+                            </div>
                         </div>
                     </div>
 
