added media, and burger-btn

--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,13 @@
                             </li>
                         </ul>
                     </nav>
+
+                    <!-- burger-btn -->
+                  
+                        <button class="burger-btn">
+                            <span class="burger-btn__line"></span>
+                        </button>
+                    
                     <div class="header__link">
                         <a href="" class="header__link--button">
                             CONTACT US
@@ -111,7 +118,7 @@
                             </p>
                         </div>
                         <div class="cause__img-wrap">
-                            <img class="cause__img" src="./images/cause-img.png" alt="images">
+                            <img class="section__img cause__img" src="./images/cause-img.png" alt="images">
                         </div>
                     </div>
                 </div>
@@ -289,7 +296,7 @@
 
                 <section class="addition">
                     <div class="addition__img-wrap">
-                        <img class="addition__img" src="./images/addition-img.png" alt="images">
+                        <img class="section__img addition__img" src="./images/addition-img.png" alt="images">
                     </div>
                     <div class="addition__description section__description">
                         <h3 class="addition__title title">
@@ -327,7 +334,7 @@
                         </a>
                     </div>
                     <div class="candidates__img-wrap">
-                        <img class="candidates__img" src="./images/candidates-img.png" alt="images">
+                        <img class="section__img candidates__img" src="./images/candidates-img.png" alt="images">
                     </div>
                 </section>
 
@@ -335,7 +342,7 @@
 
                 <div class="contacts">
                     <div class="contacts__img-wrap">
-                        <img class="contact__img" src="./images/contacts-img.png" alt="images">
+                        <img class="section__img contact__img" src="./images/contacts-img.png" alt="images">
                     </div>
                     <div class="contacts__items">
                         <div class="contacts__item">
