added menu -burger

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
                     <div class="header__logo logo">
                         <a class="logo__link" href="/">Thrivetalk</a>
                     </div>
-                    <nav class="menu">
+                    <nav class="menu menu--open">
                         <ul class="menu__list">
                             <li class="menu__list-item">
                                 <a class="menu__list-link menu__list-link--active" href="#">
