added @media planning square

--- a/app/index.html
+++ b/app/index.html
@@ -181,14 +181,14 @@
                         <div class="planning__item-wrap planning__item-wrap--big">
                             <div class="planning__item--big square">
                                 <span class="planning__slogan planning__slogan--big">
-                                    Physical Health
+                                    Physical  <br> Health
                                 </span>
                             </div>
                         </div>
                         <div class="planning__item-wrap planning__item-wrap--big">
                             <div class="planning__item--big square">
                                 <span class="planning__slogan planning__slogan--big">
-                                    Mental Health
+                                    Mental <br> Health
                                 </span>
                             </div>
                         </div>
