@media contacts, corrected addition and candidates and footer

--- a/app/index.html
+++ b/app/index.html
@@ -45,11 +45,11 @@
                     </nav>
 
                     <!-- burger-btn -->
-                  
-                        <button class="burger-btn">
-                            <span class="burger-btn__line"></span>
-                        </button>
-                    
+
+                    <button class="burger-btn">
+                        <span class="burger-btn__line"></span>
+                    </button>
+
                     <div class="header__link">
                         <a href="" class="header__link--button">
                             CONTACT US
@@ -157,7 +157,7 @@
                         <div class="planning__item-wrap planning__item-wrap--small">
                             <div class="planning__item--small square">
                                 <span class="planning__slogan">
-                                    Running  & Spinning
+                                    Running & Spinning
                                 </span>
                             </div>
                         </div>
@@ -181,7 +181,7 @@
                         <div class="planning__item-wrap planning__item-wrap--big">
                             <div class="planning__item--big square">
                                 <span class="planning__slogan planning__slogan--big">
-                                    Physical  <br> Health
+                                    Physical <br> Health
                                 </span>
                             </div>
                         </div>
@@ -295,14 +295,14 @@
                 <!-- addition -->
 
                 <section class="addition">
-                    <div class="addition__img-wrap">
+                    <div class="section__img-wrap addition__img-wrap">
                         <img class="section__img addition__img" src="./images/addition-img.png" alt="images">
                     </div>
-                    <div class="addition__description section__description">
+                    <div class="section__description addition__description ">
                         <h3 class="addition__title title">
                             YOU SHOULD ALSO KNOW
                         </h3>
-                        <p class="addition__text">
+                        <p class="section__text addition__text">
                             MDD affects more than 16.1 million American adults, or about 6.7%of the U.S. population age
                             18
                             and
@@ -318,14 +318,14 @@
                 <!-- candidates -->
 
                 <section class="candidates">
-                    <div class="candidates__description section__description">
-                        <h3 class="candidates__title title">
+                    <div class="section__description candidates__description ">
+                        <h3 class="title candidates__title ">
                             CONTACT US
                         </h3>
                         <p class="candidates__slogan">
                             Ready. Set. Smile
                         </p>
-                        <p class="candidates__text">
+                        <p class="section__text candidates__text">
                             Take the free online assessment to see if you are a candidate and get started on your
                             journey.
                         </p>
@@ -333,7 +333,7 @@
                             GET HELP NOW
                         </a>
                     </div>
-                    <div class="candidates__img-wrap">
+                    <div class="section__img-wrap candidates__img-wrap">
                         <img class="section__img candidates__img" src="./images/candidates-img.png" alt="images">
                     </div>
                 </section>
@@ -342,7 +342,7 @@
 
                 <div class="contacts">
                     <div class="contacts__img-wrap">
-                        <img class="section__img contact__img" src="./images/contacts-img.png" alt="images">
+                        <img class="contacts__img" src="./images/contacts-img.png" alt="images">
                     </div>
                     <div class="contacts__items">
                         <div class="contacts__item">
