--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
                     </button>
 
                     <div class="header__link">
-                        <a href="" class="header__link--button">
+                        <a href="" class="link header__link--button">
                             CONTACT US
                         </a>
                     </div>
@@ -80,8 +80,8 @@
                             </p>
 
                             <div class="description__links">
-                                <a class="description__link description__link--who-am-i " href="#">WHO AM I</a>
-                                <a class="description__link description__link--what-to-do " href="#">WHAT DO I DO</a>
+                                <a class="link description__link description__link--who-am-i " href="#">WHO AM I</a>
+                                <a class="link description__link description__link--what-to-do " href="#">WHAT DO I DO</a>
                             </div>
                         </div>
                         <div class="description__img-wrapper">
