added go-top ,corrected cause__container:grid-template

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
         <div class="wrapper">
 
             <!-- header -->
-            <header class="header">
+            <header class="header" id="header">
                 <div class="header__container">
                     <div class="header__logo logo">
                         <a class="logo__link" href="/">Thrivetalk</a>
@@ -390,6 +390,11 @@
                 <p class="footer__copy">
                     <span> &copy</span> Copyright - ThriveTalk 2017
                 </p>
+                <div class="go-top">
+                      <a class="go-top__link" href="#header">                  
+                </a>
+                </div>
+              
             </footer>
         </div>
     </div>
