menu and burger_btn corrected from position fixed, added main.scss, and js for go-top

--- a/app/index.html
+++ b/app/index.html
@@ -81,7 +81,8 @@
 
                             <div class="description__links">
                                 <a class="link description__link description__link--who-am-i " href="#">WHO AM I</a>
-                                <a class="link description__link description__link--what-to-do " href="#">WHAT DO I DO</a>
+                                <a class="link description__link description__link--what-to-do " href="#">WHAT DO I
+                                    DO</a>
                             </div>
                         </div>
                         <div class="description__img-wrapper">
@@ -391,10 +392,10 @@
                     <span> &copy</span> Copyright - ThriveTalk 2017
                 </p>
                 <div class="go-top">
-                      <a class="go-top__link" href="#header">                  
-                </a>
+                    <a class="go-top__link" href="#header">
+                    </a>
                 </div>
-              
+
             </footer>
         </div>
     </div>
