corrected menu-active, and span footer

--- a/app/index.html
+++ b/app/index.html
@@ -389,7 +389,8 @@
             <!-- footer -->
             <footer class="footer">
                 <p class="footer__copy">
-                    <span> &copy</span> Copyright - ThriveTalk 2017
+                    <span> &copy</span> 
+                    Copyright - ThriveTalk 2017
                 </p>
                 <div class="go-top">
                     <a class="go-top__link" href="#header">
